package app.domain.model;

public class ReferenceValue {

    //create(...)

}
